<resources>
    <string name="app_name">BlackBox</string>
    <string name="textSignUp"><u>회원가입</u></string>
    <string name="textRequest">가입 신청</string>
    <string name="textSignIn">로그인</string>
    <string name="textVehicleNumber">차량 번호</string>
    <string name="textVehiclePassword">비밀 번호</string>
    <string name="capture">capture</string>
    <string name="list">list</string>
    <string name="fileTest">fileTest</string>
    <string name="textOtherNumber">맞은편 차량 번호</string>

    <string name="action_settings">Settings</string>
    <string name="dummy_email">jondoe@gmail.com</string>
    <string name="dummy_password">123456789</string>
    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Question">How are you?</string>
    <string name="Send">Send</string>
    <string name="Done">Done</string>
    <string name="Upload">Upload</string>
    <string name="Beautiful_Picture">Beautiful Picture</string>
    <string name="Uploading">Uploading</string>
    <string name="Loading_Complete">Loading Complete, button is disabled</string>

    <array name="sample_list">
        <item>Action Button Progress sample</item>
        <item>Action Button Endless Progress sample</item>
        <item>Submit Button Progress sample</item>
        <item>Generate Button Progress sample</item>
        <item>Button State sample</item>
    </array>
</resources>
