<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@color/colorPrimary"

    tools:context=".Main">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/bgi1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:focusableInTouchMode="false"
        android:textSize="44sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textVehicleNumber"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="423dp"
        android:layout_height="wrap_content"
        android:id="@+id/VehicleNumber"
        android:inputType="text"
        android:layout_gravity="center_horizontal"

        android:imeOptions="flagNoExtractUi"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/VehiclePassword"
        android:layout_alignEnd="@+id/VehiclePassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textVehiclePassword"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_above="@+id/VehiclePassword"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/VehiclePassword"
        android:layout_gravity="center_horizontal"

        android:imeOptions="flagNoExtractUi"
        android:layout_above="@+id/btnSignIn"
        android:layout_centerHorizontal="true" />

    <com.dd.processbutton.iml.SubmitProcessButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:minWidth="100dp"
        android:text="@string/textSignIn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_textComplete="완료"
        custom:pb_textProgress="로그인 중입니다."
        android:layout_above="@+id/btnSignUp"
        android:layout_alignStart="@+id/VehiclePassword"
        android:layout_alignEnd="@+id/VehiclePassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:text="@string/textSignUp"
        android:textSize="22sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
