<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"


    android:background="@color/colorPrimary"

    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bgi1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textSignUp"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:focusableInTouchMode="false"
        android:textSize="44sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textVehicleNumber"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="423dp"
        android:layout_height="wrap_content"
        android:id="@+id/VehicleNumber"
        android:inputType="text"
        android:layout_gravity="center_horizontal"

        android:imeOptions="flagNoExtractUi"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/VehiclePassword"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textVehiclePassword"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_above="@+id/VehiclePassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/VehiclePassword"
        android:layout_gravity="center_horizontal"

        android:imeOptions="flagNoExtractUi"
        android:layout_above="@+id/btnRequest"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <com.dd.processbutton.iml.SubmitProcessButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRequest"

        android:text="@string/textRequest"
        android:textSize="22sp"
        custom:pb_textComplete="완료"
        custom:pb_textProgress="가입 신청 중입니다."

        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/VehiclePassword"
        android:layout_alignEnd="@+id/VehiclePassword" />


</RelativeLayout>
